# GoIt_Web_HW11

./: README.md  main.py  pyproject.toml
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
utils/: generate_fake_data.py
